[tool.poetry]
name = "merken"
version = "0.1.0"
description = ""
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
mistune = "^0.8.4"
python-decouple = "^3.1"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
pytest = "^4.3"
django-debug-toolbar = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
