[tool.poetry]
name = "merken"
version = "0.1.0"
description = ""
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
mistune = "^0.8.4"
python-decouple = "^3.1"
psycopg2-binary = "^2.8"
whitenoise = "^4.1"
sentry-sdk = "=0.8.0"
django-robots = "^3.1"
django-cachalot = "^2.1"
djangorestframework = "^3.9"
django-webpack-loader = "^0.6.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
pytest = "^4.3"
django-debug-toolbar = "^1.11"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
