[tool.poetry]
name = "merken"
version = "0.1.0"
description = ""
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
mistune = "^0.8.4"
psycopg2-binary = "^2.8"
whitenoise = "^4.1"
sentry-sdk = "=0.8.0"
django-robots = "^3.1"
django-cachalot = "^2.1"
djangorestframework = "^3.9"
django-webpack-loader = "^0.6.0"
django-environ = "^0.4.5"
argon2-cffi = "^19.1"
django-allauth = "^0.39.1"
django-widget-tweaks = "^1.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
pytest = "^4.3"
django-debug-toolbar = "^1.11"
coverage = "^4.5"
pytest-django = "^3.4"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
